@@ -1,14 +1,21 @@
 package org.bukkit.plugin.java;
 
+import com.mohistmc.mjson.Json;
 import com.mohistmc.mohist.Mohist;
 import com.mohistmc.mohist.bukkit.PluginsLibrarySource;
 import com.mohistmc.mohist.bukkit.remapping.RemappingURLClassLoader;
 import com.mohistmc.tools.ConnectionUtil;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.URI;
+import org.bukkit.plugin.PluginDescriptionFile;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
@@ -16,10 +23,6 @@ import java.nio.channels.ReadableByteChannel;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
-import mjson.Json;
-import org.bukkit.plugin.PluginDescriptionFile;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
 class LibraryLoader {
 
@@ -44,20 +47,25 @@ class LibraryLoader {
 
         List<File> libraries = new ArrayList<>();
         List<Dependency> newDependencies = new ArrayList<>();
+        var d = mohistLibs();
 
         for (Dependency dependency : dependencies) {
             String group = dependency.group().replace(".", "/");
             String fileName = "%s-%s.jar".formatted(dependency.name(), dependency.version());
-            if (dependency.version().toString().equalsIgnoreCase("LATEST")) {
-                URL mavenUrl = URI.create(PluginsLibrarySource.DEFAULT + "%s/%s/%s".formatted(group, dependency.name(), "maven-metadata.xml")).toURL();
-                Json compile_json2Json = Json.readXml(mavenUrl).at("metadata");
-                List<Object> v = compile_json2Json.at("versioning").at("versions").at("version").asList();
-                Dependency dependency0 = new Dependency(group, dependency.name(), v.get(v.size() - 1), false);
-                newDependencies.add(dependency0);
-            } else {
-                newDependencies.add(dependency);
-                String pomUrl = PluginsLibrarySource.DEFAULT + "%s/%s/%s/%s".formatted(group, dependency.name(), dependency.version(), fileName.replace("jar", "pom"));
-                newDependencies.addAll(initDependencies0(new URL(pomUrl)));
+            if (!d.contains(fileName)) {
+                if (dependency.version().toString().equalsIgnoreCase("LATEST")) {
+                    URL mavenUrl = URI.create(PluginsLibrarySource.DEFAULT + "%s/%s/%s".formatted(group, dependency.name(), "maven-metadata.xml")).toURL();
+                    Json compile_json2Json = Json.readXml(mavenUrl.toString()).at("metadata");
+                    List<Object> v = compile_json2Json.at("versioning").at("versions").at("version").asList();
+                    Dependency dependency0 = new Dependency(group, dependency.name(), (String) v.get(v.size() - 1), false);
+                    newDependencies.add(dependency0);
+                } else {
+                    newDependencies.add(dependency);
+                    String pomUrl = PluginsLibrarySource.DEFAULT + "%s/%s/%s/%s".formatted(group, dependency.name(), dependency.version(), fileName.replace("jar", "pom"));
+                    if (ConnectionUtil.isValid(pomUrl)) {
+                        newDependencies.addAll(initDependencies0(new URL(pomUrl)));
+                    }
+                }
             }
         }
 
@@ -112,15 +120,15 @@ class LibraryLoader {
                 String group = dependency.group().replace(".", "/");
                 String fileName = "%s-%s.jar".formatted(dependency.name(), dependency.version());
                 String pomUrl = PluginsLibrarySource.DEFAULT + "%s/%s/%s/%s".formatted(group, dependency.name(), dependency.version(), fileName.replace("jar", "pom"));
-                if (ConnectionUtil.hasUrl(pomUrl)) list.addAll(initDependencies(new URL(pomUrl)));
+                if (ConnectionUtil.isValid(pomUrl)) list.addAll(initDependencies(new URL(pomUrl)));
             }
         }
         return list;
     }
 
-    public List<Dependency> initDependencies(URL url) {
+    public List<Dependency> initDependencies(URL url) throws IOException {
         List<Dependency> list = new ArrayList<>();
-        Json json2Json = Json.readXml(url).at("project");
+        Json json2Json = Json.readXml(url.toString()).at("project");
         String version = json2Json.has("parent") ? json2Json.at("parent").asString("version") : json2Json.asString("version");
         String groupId = json2Json.has("parent") ? json2Json.at("parent").asString("groupId") : json2Json.asString("groupId");
 
@@ -162,7 +170,7 @@ class LibraryLoader {
                         URL mavenUrl = URI.create(PluginsLibrarySource.DEFAULT + "%s/%s/%s".formatted(groupId.replace(".", "/"), artifactId, "maven-metadata.xml")).toURL();
                         Json compile_json2Json = Json.readXml(mavenUrl).at("metadata");
                         List<Object> v = compile_json2Json.at("versioning").at("versions").at("version").asList();
-                        Dependency dependency = new Dependency(groupId, artifactId, v.get(v.size() - 1), true);
+                        Dependency dependency = new Dependency(groupId, artifactId, (String) v.get(v.size() - 1), true);
                         list.add(dependency);
                     }
                 }
@@ -170,6 +178,20 @@ class LibraryLoader {
         } catch (Exception ignored) {}
     }
 
-    public record Dependency(String group, String name, Object version, boolean extra) {
+    public List<String> mohistLibs() {
+        List<String> temp = new ArrayList<>();
+        BufferedReader b = new BufferedReader(new InputStreamReader(LibraryLoader.class.getClassLoader().getResourceAsStream("libraries.txt")));
+        String str;
+        try {
+            while ((str = b.readLine()) != null) {
+                String[] s = str.split("\\|");
+                temp.add(new File(s[0]).getName());
+            }
+            b.close();
+        } catch (Exception ignored) {}
+        return temp;
+    }
+
+    public record Dependency(String group, String name, String version, boolean extra) {
     }
 }
